<resources>
    <string name="app_name">Trobify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_home">This is home Fragment</string>
    <string name="text_gallery">This is gallery Fragment</string>
    <string name="text_slideshow">This is slideshow Fragment</string>
    <string name="precioMes">%d€/mes</string>
    <string name="precio">%d€</string>
    <string name="favoritos">Favoritos</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tipo_de_operaci_n">Tipo de Operación</string>
    <string name="tipo_de_inmueble">Tipo de inmueble</string>
    <string name="precio_m_nimo">Precio Mínimo:</string>
    <string name="n_de_habitaciones">Nº de Habitaciones</string>
    <string name="n_de_ba_os">Nº de Baños</string>
    <string name="estado">Estado</string>
    <string name="planta">Planta</string>
    <string name="venta">Venta</string>
    <string name="alquiler">Alquiler</string>
    <string name="alquiler_de_habitaci_n">Alquiler de Habitación</string>
    <string name="intercambio_de_viviendas">Intercambio de viviendas</string>
    <string name="tico">Ático</string>
    <string name="habitaci_n">Habitación</string>
    <string name="casa_chalet">Casa / Chalet</string>
    <string name="piso">Piso</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4_o_m_s">4 o más</string>
    <string name="obra_nueva">Obra nueva</string>
    <string name="buen_estado">Buen estado</string>
    <string name="a_reformar">A reformar</string>
    <string name="nueva_construcci_n">Nueva construcción</string>
    <string name="planta_baja_0_3">Planta baja (0–3)</string>
    <string name="planta_intermedia_3_10">Planta intermedia (3–10)</string>
    <string name="planta_alta_10">Planta alta (10 - *)</string>
    <string name="precio_m_ximo">Precio Máximo:</string>
    <string name="relevancia">Relevancia</string>
    <string name="rando_de_precios">Rando de precios</string>
    <string name="filtrar">Filtrar</string>
    <string name="mapa">Mapa</string>
    <string name="inicio_titulo">Inicio</string>
    <string name="ordenar_titulo">¡Ordena a tu gusto!</string>
    <string name="filtrar_titulo">¡Filtra como quieras!</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="nueva_imagen">Nueva Imagen</string>
    <string name="eliminar">Eliminar</string>
    <string name="registrarse">Registrarse</string>
    <string name="apellidos">Apellidos</string>
    <string name="usuario_generico">Usuario Genérico</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>