<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentacion.registrar.RegistrarseFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/dni"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dni">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/nombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputDni">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/apellidos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNombre">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apellidos">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/telefono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputApellidos">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/telefono">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/usuario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputTelefono">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usuario">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/contrasena"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputUsuario">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contrasena">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/repetirContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/repetir_contrasena"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputContrasena">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRepetirContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repetirContrasena">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:id="@+id/fotoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/foto_de_perfil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputRepetirContrasena">

            </TextView>

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/usuario_generico"
                android:src="@drawable/anonymous_user"
                app:layout_constraintHeight_max="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fotoPerfil"
                app:layout_constraintWidth_max="100dp">

            </ImageView>

            <Button
                android:id="@+id/nuevaImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/nueva_imagen"
                app:layout_constraintBottom_toBottomOf="@+id/imagen"
                app:layout_constraintStart_toEndOf="@+id/imagen">

            </Button>

            <ImageView
                android:id="@+id/eliminarImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_clear_24"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/imagen"
                app:layout_constraintTop_toTopOf="@id/imagen">

            </ImageView>

            <Button
                android:id="@+id/registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/registrarse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagen">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>